--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "ganglios-react",
+  "name": "Maja-Karin-Fredriksson",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-image-gallery": "^0.8.17",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
@@ -21,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-social-icons": "^4.1.0"
+  }
 }
